[#2] setup dependency injection

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
+apply from: "$rootDir/gradle/dagger.gradle"
+
 android {
   compileSdkVersion Config.targetSdk
   buildToolsVersion Config.buildToolsVersion
@@ -45,6 +47,7 @@ dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
 
   implementation project(':core')
+  implementation project(':feature-daily')
 
   implementation Libs.Kotlin.stdlib
   implementation Libs.AndroidX.appcompat
