--- a/feature-daily/build.gradle
+++ b/feature-daily/build.gradle
@@ -3,5 +3,7 @@ import com.karzek.buildsrc.Libs
 apply from: "$rootDir/gradle/android-library.gradle"
 
 dependencies {
+  implementation project(':core')
+
   implementation Libs.ReactiveX.Java.rxJava3
 }
