--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.karzek.planner">
 
+  <uses-permission android:name="android.permission.INTERNET"/>
+
   <application
       android:name=".PlannerApplication"
       android:allowBackup="true"
