--- a/feature-daily/build.gradle
+++ b/feature-daily/build.gradle
@@ -5,5 +5,11 @@ apply from: "$rootDir/gradle/android-library.gradle"
 dependencies {
   implementation project(':core')
 
-  implementation Libs.ReactiveX.Java.rxJava3
+  implementation Libs.ReactiveX.Java.rxJava2Android
+  implementation Libs.ReactiveX.Kotlin.rxKotlin
+
+  implementation Libs.Retrofit.retrofit
+  implementation Libs.Retrofit.retrofitGson
+  implementation Libs.Retrofit.retrofitRxAdapter
+  implementation Libs.Gson.gson
 }
