--- a/feature-daily/build.gradle
+++ b/feature-daily/build.gradle
@@ -4,6 +4,8 @@ apply from: "$rootDir/gradle/android-library.gradle"
 
 dependencies {
   implementation project(':core')
+  implementation project(':lib-localization')
+  implementation project(':lib-authorization')
 
   implementation Libs.ReactiveX.Java.rxJava2Android
   implementation Libs.ReactiveX.Kotlin.rxKotlin
