--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,6 @@ include ':app'
 include ':core'
 include ':buildSrc'
 include ':feature-daily'
+include ':lib-localization'
+include ':lib-authorization'
+include ':feature-debug'
