[#09] add navigation to debug screen to add authorisation token

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
   implementation Libs.ReactiveX.Java.rxJava2Android
   implementation Libs.OkHttp.okHttp
   implementation Libs.Gson.gson
+  implementation Libs.Navigation.fragment
+  implementation Libs.Navigation.ui
 }
