--- a/feature-debug/build.gradle
+++ b/feature-debug/build.gradle
@@ -8,4 +8,7 @@ dependencies {
 
   implementation Libs.ReactiveX.Java.rxJava2Android
   implementation Libs.ReactiveX.Kotlin.rxKotlin
+
+  implementation Libs.Navigation.fragment
+  implementation Libs.Navigation.ui
 }
