[#07] show list of dummy todos in daily

--- a/feature-daily/build.gradle
+++ b/feature-daily/build.gradle
@@ -10,6 +10,8 @@ dependencies {
   implementation project(':lib-localization')
   implementation project(':lib-authorization')
 
+  implementation Libs.AndroidX.constraintLayout
+
   implementation Libs.ReactiveX.Java.rxJava2Android
   implementation Libs.ReactiveX.Kotlin.rxKotlin
 
