--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,13 +53,19 @@ dependencies {
   implementation project(':lib-localization')
 
   implementation Libs.Kotlin.stdlib
+
   implementation Libs.AndroidX.appcompat
   implementation Libs.AndroidX.coreKtx
   implementation Libs.AndroidX.crypto
+
   implementation Libs.Timber.timber
+
+  debugImplementation Libs.LeakCanary.leakCanary
+
   implementation Libs.ReactiveX.Java.rxJava2Android
   implementation Libs.OkHttp.okHttp
   implementation Libs.Gson.gson
+
   implementation Libs.Navigation.fragment
   implementation Libs.Navigation.ui
 }
